# MapIR

./: .editorconfig  .gitattributes  .gitignore  MapIR-Studio.spec  README.md  build_exe.bat  export_blockout_examples.bat  format.bat  install.bat  lint.bat  mapir_studio.py  preflight.bat  pyproject.toml  render_examples.bat  requirements-dev.txt  requirements.txt  run_desktop.bat  run_ui.bat  test.bat  validate_examples.bat
.github/workflows/: ci.yml
docs/: canvas_and_sketch_layer.md  design_rules.md  gameplay_metrics.md  local_llm.md  release_plan.md  templates.md  v0_5_workflow.md
docs/screenshots/: README.md
examples/assets/: asset_registry_basic.json
examples/demos/: demo_interior_warehouse.json  demo_scene_industrial_port.json  demo_world_modern_island_city.json
examples/scenes/: scene_port_yard.json  scene_urban_alley.json  scene_warehouse_interior.json
examples/worlds/: world_jisso_city.json
guides/: README.md  design_rules.json
guides/design_rules/: level_design_guidance.md  open_world_scale.md  urban_playgrounds.md  worldbuilding_structure.md
mapir/: __init__.py  cli.py
mapir/canvas/: __init__.py  sketch_models.py  sketch_state.py  sketch_to_ir.py
mapir/core/: enums.py  errors.py  geometry.py  models.py  validation.py
mapir/design/: __init__.py  design_rules.py  reports.py  validators.py
mapir/desktop/: __init__.py  app.py  llm_worker.py  main_window.py  preview_scene.py  state.py  theme.py
mapir/export/: blender_exporter.py  obj_exporter.py
mapir/generation/: __init__.py  building_generator.py  gameplay_metrics.py  guidance_generator.py  landmark_generator.py  layout.py  parcel_generator.py  pipeline.py  road_generator.py  scene_slot_generator.py  template_instantiation.py  templates.py
mapir/llm/: __init__.py  drafting.py  (+8 more)
projects/: README.md
scripts/: build_demo_fixtures.py  preflight.py
tests/: conftest.py  test_cli_v05.py  test_design_rules.py  test_desktop_imports.py  test_exporters.py  test_gameplay_metrics.py  test_llm_cli_mock.py  test_llm_mock_provider.py  test_llm_plan_to_ir.py  test_llm_repair.py  test_llm_settings.py  test_paths.py  test_pipeline.py  test_preflight.py  test_preview_label_scale.py  test_sketch_models.py  test_svg_renderer.py  test_templates.py  test_ui.py  test_v05_workflow_mock.py  test_validation.py  test_version.py  test_wizard_smoke.py
(+51 files in other folders)
