[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapir"
version = "0.2.0"
description = "MapIR — generate, describe, validate, and export game spaces (World + Scene)"
requires-python = ">=3.11"
authors = [{ name = "BLUME" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mapir = "mapir.cli:app"

[tool.setuptools.packages.find]
include = ["mapir*"]
exclude = ["tests*", "examples*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
