[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapir"
version = "0.3.0"
description = "MapIR — structured IR and desktop toolchain for game worlds, scenes, interiors, validation, preview, and blockout export"
requires-python = ">=3.11"
authors = [{ name = "BLUME" }]
license = { text = "Proprietary" }
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pyinstaller>=6.0",
]

[project.scripts]
mapir = "mapir.cli:app"

[tool.setuptools.packages.find]
include = ["mapir*", "scripts*"]
exclude = ["tests*", "examples*", "output*", "build*", "dist*", "projects*", "docs*"]

[tool.setuptools.package-data]
mapir = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | build
  | dist
  | output
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "output", "mapir.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by black
    "B008",   # typer uses default-argument calls (typer.Argument(...))
    "UP042",  # `class X(str, Enum)` is intentional — pydantic/JSON serialisation parity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"scripts/*" = ["B"]
